Compiler/tests/good/Structs/02_structs.rs

struct t(i8,bool);

fn main(){
    let test = t(1, false)

    println!("{}, {}", test.0, test.1);
}
