Compiler/tests/bad/Variables/07_variable.rs
struct Point2D
{
    x:i32,
    y:bool
}

fn main(){
    let x : Vec3<i32> = Point2D{x:6, y:false};
}
